@@ -140,6 +140,112 @@ TEST(bottom_pos_at_all_even)
 	assert_int_equal(3, get_window_bottom_pos(view));
 }
 
+/* 0 row----file0----file1----- <= top
+ * 1 row  | file2  | file3  |
+ * 2 row  | file4  | file5  |
+ * 3 row  | file6  | file7  |   <= middle
+ * 4 row  | file8  | file9  |
+ * 5 row  | file10 | file11 |   <= bottom - offset
+ * 6 row  | file12 | file13 |
+ * 7 row----file14---file15----
+ *          file16
+ */
+
+TEST(top_accounts_for_columns)
+{
+	view->top_line = 0;
+	view->list_rows = 17;
+	view->column_count = 2;
+	view->window_cells = view->column_count*view->window_rows;
+
+	view->list_pos = 6;
+	assert_int_equal(0, get_window_top_pos(view));
+
+	view->list_pos = 3;
+	assert_int_equal(1, get_window_top_pos(view));
+}
+
+TEST(middle_accounts_for_columns)
+{
+	view->top_line = 0;
+	view->list_rows = 17;
+	view->column_count = 2;
+	view->window_cells = view->column_count*view->window_rows;
+
+	view->list_pos = 2;
+	assert_int_equal(6, get_window_middle_pos(view));
+
+	view->list_pos = 11;
+	assert_int_equal(7, get_window_middle_pos(view));
+}
+
+TEST(bottom_with_offset_accounts_for_columns)
+{
+	view->top_line = 0;
+	view->list_rows = 17;
+	view->column_count = 2;
+	view->window_cells = view->column_count*view->window_rows;
+
+	view->list_pos = 8;
+	assert_int_equal(10, get_window_bottom_pos(view));
+
+	view->list_pos = 11;
+	assert_int_equal(11, get_window_bottom_pos(view));
+}
+
+/*          file0    file1
+ * 0 row----file2----file3-----
+ * 1 row  | file4  | file5  |
+ * 2 row  | file6  | file7  |   <= top + offset
+ * 3 row  | file8  | file9  |   <= middle
+ * 4 row  | file10 | file11 |
+ * 5 row  | file12 | file13 |
+ * 6 row  | file14 | file15 |
+ * 7 row----file16------------- <= bottom
+ */
+
+TEST(top_with_offset_accounts_for_columns)
+{
+	view->top_line = 2;
+	view->list_rows = 17;
+	view->column_count = 2;
+	view->window_cells = view->column_count*view->window_rows;
+
+	view->list_pos = 14;
+	assert_int_equal(6, get_window_top_pos(view));
+
+	view->list_pos = 3;
+	assert_int_equal(7, get_window_top_pos(view));
+}
+
+TEST(middle_with_offset_accounts_for_columns)
+{
+	view->top_line = 2;
+	view->list_rows = 17;
+	view->column_count = 2;
+	view->window_cells = view->column_count*view->window_rows;
+
+	view->list_pos = 14;
+	assert_int_equal(8, get_window_middle_pos(view));
+
+	view->list_pos = 3;
+	assert_int_equal(9, get_window_middle_pos(view));
+}
+
+TEST(bottom__accounts_for_columns)
+{
+	view->top_line = 2;
+	view->list_rows = 17;
+	view->column_count = 2;
+	view->window_cells = view->column_count*view->window_rows;
+
+	view->list_pos = 8;
+	assert_int_equal(16, get_window_bottom_pos(view));
+
+	view->list_pos = 5;
+	assert_int_equal(15, get_window_bottom_pos(view));
+}
+
 static void
 ensure_all_visible(int odd)
 {
